--- a/H1EmuLauncher/SteamFrame/GameInfo.xaml
+++ b/H1EmuLauncher/SteamFrame/GameInfo.xaml
@@ -21,22 +21,18 @@
         </Grid.ColumnDefinitions>
         
         <!-- Choose version message -->
-        <RichTextBox
-            FontSize="16"
-            Background="Transparent"
-            BorderThickness="0"
-            Foreground="White"
-            IsReadOnly="True"
-            Cursor="Arrow">
+        <RichTextBox FontSize="16"
+                     Background="Transparent"
+                     BorderThickness="0"
+                     Foreground="White"
+                     IsReadOnly="True"
+                     Cursor="Arrow">
             
             <FlowDocument>
                 <Paragraph TextAlignment="Center">
-                    <Run
-                        Text="{DynamicResource item29}"/>
-                    <Run
-                        Foreground="#FFCA1420" Text="{DynamicResource item135}"/>
-                    <Run
-                        Text="{DynamicResource item30}"/>
+                    <Run Text="{DynamicResource item29}"/>
+                    <Run Foreground="#FFCA1420" Text="{DynamicResource item135}"/>
+                    <Run Text="{DynamicResource item30}"/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
