--- a/H1EmuLauncher/Windows/AddServerWindow.xaml
+++ b/H1EmuLauncher/Windows/AddServerWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="H1EmuLauncher.AddServer"
+﻿<Window x:Class="H1EmuLauncher.AddServerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,7 +11,7 @@
         Height="300"
         WindowStartupLocation="CenterOwner"
         Background="#FF2A2A32"
-        FontFamily="Bahnschrift Light"
+        FontFamily="Bahnschrift"
         FontSize="16"
         ResizeMode="NoResize"
         Loaded="AddServerMenuLoaded"
@@ -127,6 +127,7 @@
                     HorizontalAlignment="Center"
                     VerticalContentAlignment="Center"
                     FontSize="16"
+                    FontWeight="Light"
                     GotFocus="ServerNameGotFocus"
                     LostFocus="ServerNameLostFocus"
                     Style="{DynamicResource TextBoxPrimaryStyle}"/>
@@ -142,6 +143,7 @@
                     IsHitTestVisible="False"
                     Foreground="White"
                     FontSize="16"
+                    FontWeight="Light"
                     Text="{DynamicResource item144}"/>
 
                     <!-- Server IP textbox -->
@@ -153,6 +155,7 @@
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
                     FontSize="16"
+                    FontWeight="Light"
                     GotFocus="ServerIPGotFocus"
                     LostFocus="ServerIPLostFocus"
                     KeyDown="ServerIpBoxKeyDown"
@@ -168,6 +171,7 @@
                     IsHitTestVisible="False"
                     Foreground="White"
                     FontSize="16"
+                    FontWeight="Light"
                     Text="{DynamicResource item145}"/>
 
                     <!-- Add server button -->
