--- a/H1EmuLauncher/Windows/MessageBoxWindow.xaml
+++ b/H1EmuLauncher/Windows/MessageBoxWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="H1EmuLauncher.MsgBox"
+﻿<Window x:Class="H1EmuLauncher.MessageBoxWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,19 +13,18 @@
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterScreen"
         Background="#FF2A2A32"
-        FontFamily="Bahnschrift Light"
+        FontFamily="Bahnschrift"
         FontSize="16"
         Activated="MainMsgBoxActivated"
         Loaded="MainMsgBoxLoaded">
 
         <!-- Hide window border but keep animations -->
         <WindowChrome.WindowChrome>
-            <WindowChrome
-                GlassFrameThickness="0"
-                CornerRadius="0"
-                CaptionHeight="0"
-                ResizeBorderThickness="0"
-                UseAeroCaptionButtons="False"/>
+            <WindowChrome GlassFrameThickness="0"
+                          CornerRadius="0"
+                          CaptionHeight="0"
+                          ResizeBorderThickness="0"
+                          UseAeroCaptionButtons="False"/>
 
         </WindowChrome.WindowChrome>
 
@@ -40,9 +39,8 @@
         </Grid.RowDefinitions>
 
         <!-- Grid for logo and exit button -->
-        <Grid 
-            MouseLeftButtonDown="MoveMessageBox"
-            Background="#FF2A2A32">
+        <Grid MouseLeftButtonDown="MoveMessageBox"
+              Background="#FF2A2A32">
             
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -54,33 +52,31 @@
             </Grid.RowDefinitions>
 
             <!-- Logo -->
-            <DockPanel
-                Margin="14,2,0,0"
-                Height="40"
-                HorizontalAlignment="Left">
+            <DockPanel Margin="14,2,0,0"
+                       Height="40"
+                       HorizontalAlignment="Left">
 
-                <Image
-                    Source="..\Resources\H1EmuIcon.png"
-                    Width="104"
-                    Height="28"
-                    Margin="0,4,0,0"
-                    VerticalAlignment="Center"/>
+                <Image Source="..\Resources\H1EmuIcon.png"
+                       Width="104"
+                       Height="28"
+                       Margin="0,4,0,0"
+                       VerticalAlignment="Center"/>
 
             </DockPanel>
 
             <!-- Exit button -->
             <DockPanel Grid.Column="1">
                 <Button x:Name="CloseButton"
-                    Click="CloseButton_Click"
-                    RenderOptions.BitmapScalingMode="Fant"
-                    Width="38"
-                    Height="25"
-                    Margin="0,5,15,7"
-                    VerticalAlignment="Bottom"
-                    HorizontalAlignment="Right"
-                    BorderThickness="0"
-                    Style="{StaticResource CloseButtonStyle}">
-                    
+                        Click="CloseButton_Click"
+                        RenderOptions.BitmapScalingMode="Fant"
+                        Width="38"
+                        Height="25"
+                        Margin="0,5,15,7"
+                        VerticalAlignment="Bottom"
+                        HorizontalAlignment="Right"
+                        BorderThickness="0"
+                        Style="{StaticResource CloseButtonStyle}">
+
                     <Button.Background>
                         <ImageBrush ImageSource="..\Resources\Exit.png"/>
                     </Button.Background>
@@ -97,11 +93,10 @@
 
             <!-- Drop shadow effect -->
             <Border.Effect>
-                <DropShadowEffect
-                    BlurRadius="8"
-                    Direction="-90"
-                    RenderingBias="Quality"
-                    ShadowDepth="1"/>
+                <DropShadowEffect BlurRadius="8"
+                                  Direction="-90"
+                                  RenderingBias="Quality"
+                                  ShadowDepth="1"/>
                 
             </Border.Effect>
 
@@ -113,30 +108,30 @@
 
                 <!-- Main message box text -->
                 <TextBlock x:Name="text"
-                       Margin="25,10,25,10"
-                       Padding="0,5,0,0"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Center"
-                       Background="Transparent"
-                       Foreground="White"
-                       TextWrapping="Wrap"
-                       TextAlignment="Center"/>
+                           Margin="25,10,25,10"
+                           Padding="0,5,0,0"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"
+                           Background="Transparent"
+                           Foreground="White"
+                           FontWeight="Light"
+                           TextWrapping="Wrap"
+                           TextAlignment="Center"/>
 
                 <!-- Close msgbox window button -->
-                <Button
-                Grid.Row="1"
-                Click="OkButton"
-                RenderOptions.BitmapScalingMode="Fant"
-                Width="100"
-                Height="30"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Center"
-                Foreground="White"
-                FontFamily="Arial Black"
-                FontSize="18"
-                BorderThickness="0"
-                Content="{DynamicResource item92}"
-                Style="{DynamicResource StandardButton}">
+                <Button Grid.Row="1"
+                        Click="OkButton"
+                        RenderOptions.BitmapScalingMode="Fant"
+                        Width="100"
+                        Height="30"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"
+                        Foreground="White"
+                        FontFamily="Arial Black"
+                        FontSize="18"
+                        BorderThickness="0"
+                        Content="{DynamicResource item92}"
+                        Style="{DynamicResource StandardButton}">
 
                     <Button.Background>
                         <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
