--- a/H1EmuLauncher/Windows/SettingsWindow.xaml
+++ b/H1EmuLauncher/Windows/SettingsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="H1EmuLauncher.Settings"
+﻿<Window x:Class="H1EmuLauncher.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,7 +11,7 @@
         Height="auto"
         WindowStartupLocation="CenterOwner"
         Background="#FF2A2A32"
-        FontFamily="Bahnschrift Light"
+        FontFamily="Bahnschrift"
         FontSize="16"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
@@ -22,12 +22,11 @@
 
         <!-- Hide window border but keep animations -->
         <WindowChrome.WindowChrome>
-            <WindowChrome
-                GlassFrameThickness="0"
-                CornerRadius="0"
-                CaptionHeight="0"
-                ResizeBorderThickness="0"
-                UseAeroCaptionButtons="False"/>
+            <WindowChrome GlassFrameThickness="0"
+                          CornerRadius="0"
+                          CaptionHeight="0"
+                          ResizeBorderThickness="0"
+                          UseAeroCaptionButtons="False"/>
 
         </WindowChrome.WindowChrome>
 
@@ -53,9 +52,8 @@
             </Grid.RowDefinitions>
 
             <!-- Grid for logo and exit button -->
-            <Grid 
-                MouseLeftButtonDown="MoveWindow"
-                Background="#FF2A2A32">
+            <Grid MouseLeftButtonDown="MoveWindow"
+                  Background="#FF2A2A32">
                 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -67,16 +65,14 @@
                 </Grid.RowDefinitions>
 
                 <!-- Logo -->
-                <DockPanel
-                    Height="60"
-                    Margin="23,0,0,0"
-                    HorizontalAlignment="Left">
+                <DockPanel Height="60"
+                           Margin="23,0,0,0"
+                           HorizontalAlignment="Left">
                     
-                    <Image
-                        Source="..\Resources\H1EmuIcon.png"
-                        Width="175"
-                        Height="45"
-                        VerticalAlignment="Bottom"/>
+                    <Image Source="..\Resources\H1EmuIcon.png"
+                           Width="175"
+                           Height="45"
+                           VerticalAlignment="Bottom"/>
                 </DockPanel>
 
                 <!-- Exit button -->
@@ -108,11 +104,10 @@
 
                 <!-- Drop shadow effect -->
                 <Border.Effect>
-                    <DropShadowEffect
-                        BlurRadius="15"
-                        Direction="-90"
-                        RenderingBias="Quality"
-                        ShadowDepth="1"/>
+                    <DropShadowEffect BlurRadius="15"
+                                      Direction="-90"
+                                      RenderingBias="Quality"
+                                      ShadowDepth="1"/>
                     
                 </Border.Effect>
                 
@@ -130,36 +125,35 @@
                         </Grid.ColumnDefinitions>
 
                         <!-- Game directory text -->
-                        <TextBlock
-                        Margin="20,0,0,10"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Left"
-                        FontSize="16"
-                        FontFamily="Bahnschrift Light"
-                        Foreground="FloralWhite"
-                        Text="{DynamicResource item41}"/>
+                        <TextBlock Margin="20,0,0,10"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Left"
+                                   FontSize="16"
+                                   Foreground="FloralWhite"
+                                   FontWeight="Light"
+                                   Text="{DynamicResource item41}"/>
 
                         <!-- Active directory textbox -->
                         <TextBox x:Name="directoryBox"
-                        Grid.Column="1"
-                        Height="35"
-                        Margin="10,0,20,10"
-                        Padding="35,7,35,0"
-                        IsReadOnly="True"
-                        Cursor="Arrow"
-                        Style="{DynamicResource TextBoxPrimaryStyle}"/>
+                                 Grid.Column="1"
+                                 Height="35"
+                                 Margin="10,0,20,10"
+                                 Padding="35,7,35,0"
+                                 IsReadOnly="True"
+                                 Cursor="Arrow"
+                                 FontWeight="Light"
+                                 Style="{DynamicResource TextBoxPrimaryStyle}"/>
 
                         <!-- Button to open file explorer to game directory -->
-                        <Button
-                        Grid.Column="1"
-                        Click="OpenDirectory"
-                        RenderOptions.BitmapScalingMode="Fant"
-                        Width="20"
-                        Height="20"
-                        Margin="20,0,0,12"
-                        HorizontalAlignment="Left"
-                        BorderThickness="0"
-                        Style="{DynamicResource FolderButton}">
+                        <Button Grid.Column="1"
+                                Click="OpenDirectory"
+                                RenderOptions.BitmapScalingMode="Fant"
+                                Width="20"
+                                Height="20"
+                                Margin="20,0,0,12"
+                                HorizontalAlignment="Left"
+                                BorderThickness="0"
+                                Style="{DynamicResource FolderButton}">
 
                             <Button.Background>
                                 <ImageBrush ImageSource="..\Resources\Folder.png"/>
@@ -168,15 +162,15 @@
 
                         <!-- Button to select a new game directory -->
                         <Button x:Name="directoryButton"
-                        Grid.Column="1"
-                        Click="SelectDirectory"
-                        RenderOptions.BitmapScalingMode="Fant"
-                        Width="20"
-                        Height="20"
-                        Margin="0,0,30,12"
-                        HorizontalAlignment="Right"
-                        BorderThickness="0"
-                        Style="{DynamicResource EnterButton}">
+                                Grid.Column="1"
+                                Click="SelectDirectory"
+                                RenderOptions.BitmapScalingMode="Fant"
+                                Width="20"
+                                Height="20"
+                                Margin="0,0,30,12"
+                                HorizontalAlignment="Right"
+                                BorderThickness="0"
+                                Style="{DynamicResource EnterButton}">
 
                             <Button.Background>
                                 <ImageBrush ImageSource="..\Resources\Arrow.png"/>
@@ -186,14 +180,14 @@
 
                     <!-- Current detected game version -->
                     <TextBlock x:Name="currentGame"
-                           Margin="0,0,0,5"
-                           VerticalAlignment="Bottom"
-                           HorizontalAlignment="Center"
-                           Foreground="Gray"
-                           FontFamily="Bahnschrift"
-                           FontWeight="Bold"/>
+                               Margin="0,0,0,5"
+                               VerticalAlignment="Bottom"
+                               HorizontalAlignment="Center"
+                               Foreground="Gray"
+                               FontFamily="Bahnschrift"
+                               FontWeight="Bold"/>
 
-                    <!-- Grid to host patch, latest, stable buttons and corresponding textboxes. -->
+                    <!-- Grid to host patch, latest, stable buttons and corresponding textboxes -->
                     <Grid Grid.Row="1">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
@@ -234,6 +228,7 @@
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Center"
                                    Foreground="White"
+                                   FontWeight="Light"
                                    TextWrapping="Wrap">
 
                             <Run Text="{DynamicResource item45}"/>
@@ -249,19 +244,19 @@
 
                         <!-- Install latest server button -->
                         <Button x:Name="latestButton"
-                            Grid.Row="1"
-                            Click="InstallServer"
-                            Width="220"
-                            Height="40"
-                            Margin="20"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Left"
-                            Foreground="White"
-                            FontFamily="Arial Black"
-                            FontSize="24"
-                            BorderThickness="0"
-                            Content="{DynamicResource item43}"
-                            Style="{DynamicResource StandardButton}">
+                                Grid.Row="1"
+                                Click="InstallServer"
+                                Width="220"
+                                Height="40"
+                                Margin="20"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Left"
+                                Foreground="White"
+                                FontFamily="Arial Black"
+                                FontSize="24"
+                                BorderThickness="0"
+                                Content="{DynamicResource item43}"
+                                Style="{DynamicResource StandardButton}">
 
                             <Button.Background>
                                 <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
@@ -270,30 +265,31 @@
 
                         <!-- Latest server button text -->
                         <TextBlock Grid.Row="1"
-                               Grid.Column="1"
-                               Width="400"
-                               Margin="20"
-                               VerticalAlignment="Center"
-                               HorizontalAlignment="Center"
-                               Foreground="White"
-                               TextWrapping="Wrap"
-                               Text="{DynamicResource item46}"/>
+                                   Grid.Column="1"
+                                   Width="400"
+                                   Margin="20"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Center"
+                                   Foreground="White"
+                                   FontWeight="Light"
+                                   TextWrapping="Wrap"
+                                   Text="{DynamicResource item46}"/>
 
                         <!-- Install stable server button -->
                         <Button x:Name="stableButton"
-                            Grid.Row="2"
-                            Click="InstallServer"
-                            Width="220"
-                            Height="40"
-                            Margin="20"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Left"
-                            Foreground="White"
-                            FontFamily="Arial Black"
-                            FontSize="24"
-                            BorderThickness="0"
-                            Content="{DynamicResource item44}"
-                            Style="{DynamicResource StandardButton}">
+                                Grid.Row="2"
+                                Click="InstallServer"
+                                Width="220"
+                                Height="40"
+                                Margin="20"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Left"
+                                Foreground="White"
+                                FontFamily="Arial Black"
+                                FontSize="24"
+                                BorderThickness="0"
+                                Content="{DynamicResource item44}"
+                                Style="{DynamicResource StandardButton}">
 
                             <Button.Background>
                                 <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
@@ -302,42 +298,44 @@
 
                         <!-- Stable server button text -->
                         <TextBlock Grid.Row="2"
-                               Grid.Column="1"
-                               Width="400"
-                               Margin="20"
-                               VerticalAlignment="Center"
-                               HorizontalAlignment="Center"
-                               Foreground="White"
-                               TextWrapping="Wrap"
-                               Text="{DynamicResource item47}"/>
+                                   Grid.Column="1"
+                                   Width="400"
+                                   Margin="20"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Center"
+                                   Foreground="White"
+                                   FontWeight="Light"
+                                   TextWrapping="Wrap"
+                                   Text="{DynamicResource item47}"/>
                     </Grid>
 
                     <!-- Grid for settings progress bar -->
                     <Grid x:Name="settingsProgressRow"
-                      Grid.Row="2"
-                      Visibility="Collapsed">
+                          Grid.Row="2"
+                          Visibility="Collapsed">
 
                         <!-- Status progress bar -->
                         <ProgressBar x:Name="settingsProgress"
-                                 Grid.Row="2"
-                                 Height="35"
-                                 Margin="20,0,20,30"
-                                 Style="{DynamicResource ProgressBar}"/>
+                                     Grid.Row="2"
+                                     Height="35"
+                                     Margin="20,0,20,30"
+                                     Style="{DynamicResource ProgressBar}"/>
 
                         <!-- Progress bar outline (usually the fill colour overlaps the outline of the progress bar) -->
                         <ProgressBar Grid.Row="2"
-                                 Height="35"
-                                 Margin="20,0,20,30"
-                                 Background="Transparent"
-                                 Style="{DynamicResource ProgressBar}"/>
+                                     Height="35"
+                                     Margin="20,0,20,30"
+                                     Background="Transparent"
+                                     Style="{DynamicResource ProgressBar}"/>
 
                         <!-- Status text to overlay progress bar -->
                         <TextBlock x:Name="settingsProgressText"
-                           Grid.Row="2"
-                           HorizontalAlignment="Center"
-                           Margin="0,8,0,0"
-                           Foreground="White"
-                           Background="Transparent"/>
+                                   Grid.Row="2"
+                                   HorizontalAlignment="Center"
+                                   Margin="0,8,0,0"
+                                   Foreground="White"
+                                   FontWeight="Light"
+                                   Background="Transparent"/>
                     </Grid>
                 </Grid>
             </Border>
@@ -351,7 +349,8 @@
                     HorizontalAlignment="Left">
                 
                     <Hyperlink Click="AccountKeyClick"
-                               Foreground="White">
+                               Foreground="White"
+                               FontWeight="Light">
                     
                         <TextBlock Text="{DynamicResource item154}"
                                    Style="{DynamicResource HyperLinkStyle}"/>
@@ -366,6 +365,7 @@
                        VerticalAlignment="Center"
                        HorizontalAlignment="Right"
                        Foreground="White"
+                       FontWeight="Light"
                        Text="{DynamicResource item124}"/>
 
         </Grid>
